fix(client): scrolbar overlap issue on the resource list page

--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -21,7 +21,6 @@ $tabs-width: 300px;
     padding: var(--large-spacing);
     box-sizing: border-box;
     overflow-y: auto;
-    scrollbar-gutter: stable;
     @include scrollbars(16px, var(--black60), transparent);
 
     .sub-list {
@@ -31,7 +30,7 @@ $tabs-width: 300px;
 
   &__main {
     @include scrollbars(16px, var(--black60), transparent);
-    scrollbar-gutter: stable;
+    padding-right: var(--large-spacing);
     flex: 1;
     overflow: auto;
     position: relative;
